title in ng-dialog alignment fixed

--- a/ui/app/styles/bahmni-components/_ngDialog.scss
+++ b/ui/app/styles/bahmni-components/_ngDialog.scss
@@ -6,6 +6,8 @@
     h1 {
         display: inline-block;
         color: #ddd;
+        line-height: 50px;
+        padding: 0 0 0 20px;
     }
     h2 {
         display: inline-block;
